adde function and files to display the info of bdd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "files.refactoring.autoSave": true,
-  "python.testing.autoTestDiscoverOnSaveEnabled": false
+  "python.testing.autoTestDiscoverOnSaveEnabled": false,
+  "files.autoSave": "off"
 }
